apps/home/ha/base/node-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant
  name: home-assistant-service
spec:
  ports:
    - nodePort: 31123
      port: 8123
      protocol: TCP
      targetPort: 8123
  selector:
    app: home-assistant
  type: NodePort
