apps/home/ha/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-lb
spec:
  ports:
  - port: 80
    targetPort: 8123
    name: api
    protocol: TCP
  type: LoadBalancer
  loadBalancerClass: kube-vip.io/kube-vip-class
  loadBalancerIP: 0.0.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: home-tailscale
  annotations:
    tailscale.com/hostname: ha
spec:
  ports:
    - port: 80
      targetPort: 8123
      name: api
      protocol: TCP
  type: LoadBalancer
  loadBalancerClass: tailscale
