apps/home/ha/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: home.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
    - host: home.gruber.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-tailscale
                port:
                  name: web
                  port: 80
